<resources>
    <string name="app_name">AndroidProject</string>
    <string name="titleCreateGroupe">Nouveau groupe</string>
    <string name="labelNouvGroupe">Nom du groupe</string>
    <string name="btnCreaGroupe">Créer un groupe</string>

    <string name="titleCreateMembre">Créer un membre</string>
    <string name="labelNom">Nom</string>
    <string name="labelPrenom">Prenom</string>
    <string name="labelEmail">Email</string>
    <string name="labelPseudo">Pseudo</string>
    <string name="labelMdp">Mot de passe</string>
    <string name="btnEnvoi">Envoi</string>
    <string name="labelGroupe">Groupe</string>

    <string name="titleAuthentification">Authentification</string>
    <string name="btnConnexion">se connecter</string>
    <string name="btnInscrire">s\'inscrire</string>
    <string name="title_activity_test_drawer">TestDrawerActivity</string>

    <string name="afficherCarte">Afficher la carte</string>
    <string name="inviterMembre">Inviter un membre</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="activiteGroupe">Activité du groupe</string>

    <string name="action_settings">Outils</string>
    <string name="title_activity_main_panel">Accueil</string>

    <string name="labelInvite">Inviter membre</string>


    <string name="titleCreateActivite">Creation d\'activite</string>
    <string name="labelTitre">Titre</string>
    <string name="labelDescription">Description</string>
    <string name="labelDateAct">Date Activite</string>

</resources>
