<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:text="@string/titleCreateActivite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:id="@+id/titleCreateActivite"
        android:textSize="@dimen/h1"/>



    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/inputTitreActivite"
        android:hint="@string/labelTitre"
        android:layout_below="@+id/titleCreateActivite"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="40dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/inputDescriptionActivite"
        android:hint="@string/labelDescription"
        android:layout_below="@id/inputTitreActivite"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/inputDateAct"
        android:hint="@string/labelDateAct"
        android:layout_below="@id/inputDescriptionActivite"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="15dp" />

    <Button
        android:text="@string/btnEnvoi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputDateAct"
        android:layout_alignRight="@+id/titleCreateActivite"
        android:layout_alignEnd="@+id/titleCreateActivite"
        android:layout_marginTop="46dp"
        android:id="@+id/btnEnvoi" />


</RelativeLayout>