<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_aff_membres_groupe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.leila.androidproject.AffMembresGroupe">

    <TextView
        android:id="@+id/labelGroupe"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/labelGroupe"
        android:layout_marginBottom="3dp"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/labelAffG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/labelGroupe"/>

    <ListView
        android:id="@+id/listMembers"
        android:layout_width="wrap_content"
        android:layout_height="270dp"
        android:layout_below="@id/labelGroupe"/>

    <Button
        android:id="@+id/activiteGroupe"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/activiteGroupe"
        android:layout_below="@id/listMembers"
        />

    <Button
        android:id="@+id/btnAfficherCarte"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/afficherCarte"
        android:layout_below="@id/activiteGroupe"
        />
    <Button
        android:id="@+id/btnInviterMembre"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/inviterMembre"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/btnAfficherCarte"
        />

</RelativeLayout>
