<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_authentification"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.leila.androidproject.Authentification">

    <TextView
        android:text="@string/titleAuthentification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="36sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/labelPseudo"
        android:ems="10"
        android:id="@+id/inputPseudo"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_below="@+id/labelPseudo"
        android:layout_alignLeft="@+id/labelMdp"
        android:layout_alignStart="@+id/labelMdp" />

    <TextView
        android:text="@string/labelMdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/labelMdp"
        android:textSize="24sp"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/inputPseudo"
        android:layout_alignLeft="@+id/labelPseudo"
        android:layout_alignStart="@+id/labelPseudo" />

    <Button
        android:text="@string/btnConnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSeConnecter"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/inputMdp"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/btnInscrire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/btnSinscrire"
        android:layout_below="@+id/btnSeConnecter"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/inputMdp"
        android:text="@string/labelMdp"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/labelMdp"
        android:layout_alignLeft="@+id/inputPseudo"
        android:layout_alignStart="@+id/inputPseudo" />

    <TextView
        android:text="@string/labelPseudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/labelPseudo"
        android:textSize="24sp"
        android:layout_marginTop="74dp"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
