<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:text="@string/titleCreateGroupe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titleCreateGroupe"
        android:paddingBottom="16dp"
        android:textSize="@dimen/h1"
        android:textAlignment="center" />


    <Button
        android:text="@string/btnCreaGroupe"
        android:layout_width="200dp"


        android:gravity="center"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:id="@+id/btnCreaGroupe"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp" />

    <TextView
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="49dp"
        android:textSize="15sp"
        android:id="@+id/textOperation"
        android:paddingBottom="30dp"
        android:layout_above="@+id/btnCreaGroupe"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/labelNouvGroupe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/labelNomGroupe"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:layout_marginBottom="39dp"
        android:layout_above="@+id/inputNomGroupe"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:inputType="textPersonName"
        android:textColor="#ffff"
        android:paddingLeft="20dp"
        android:background="@color/colorPrimaryDark"
        android:ems="10"
        android:id="@+id/inputNomGroupe"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="83dp"
        android:layout_above="@+id/textOperation"
        android:layout_alignRight="@+id/btnCreaGroupe"
        android:layout_alignEnd="@+id/btnCreaGroupe" />


</RelativeLayout>